      are present in the same group. (CNY-1605)
    * conary rdiff no longer produces an error if the same file is present
      on different labels. (CNY-1623)
    * Fixed a bug that meant that if a pinned trove foo was updated to the 
      version included in an installed group, the pin would not
      hold. (CNY-1652)

  o Client Changes:
    * The conaryclient module now exposes ChangeSetFromFile to instantiate
      changesets from .ccs files. (CNY-1578)

  o Internal Changes:
    * Conary clients can ask newer Conary repositories (speaking at least
      protocol version 48) for a specific changeset format. This allows one
      to use new Conary clients to generate changesets understood by older
      clients. (CNY-1544)

  o Server Changes:
    * Standalone Conary repositories or proxies can be run in SSL mode,
      if m2crypto (from contrib.rpath.org@rpl:1) is installed and the
      configuration options useSSL, sslCert and sslKey are properly set.
      (CNY-1649)

Changes in 1.1.24.1:
  o Release Correction
    * The source archive for 1.1.24 was not built from the tag for
      1.1.24 in the Mercurial repository.  1.1.24.1 is built from the
      1.1.24 tag.

Changes in 1.1.24:
  o New Feature:
    * Conary 1.1.24 introduces the framework needed to implement a new
      metadata design for Conary.  The new metadata feature allows
      various information such as description to be set for a trove.
      New XML-RPC interfaces, getNewTroveInfo() and setTroveInfo(),
      have been added to facilitate mirroring metadata.
      addMetadataItems() has been added to allow metadata to be added
      to a trove after it has been built. (CNY-1577)

  o Client Changes:
    * The Conary client now distinguishes between an upstream Conary
      proxy and a plain HTTP proxy. This is so we can properly handle
      SSL traffic through an HTTP proxy using the CONNECT HTTP method.
      As such, there is now a "conaryProxy" configuration variable, in